@@ -1,4 +1,6 @@
 # depends on: array.rb dir.rb env.rb file.rb hash.rb module.rb regexp.rb
+# vim: filetype=ruby
+# WARN
 
 if defined?(Gem) then
 
@@ -75,23 +77,30 @@ if defined?(Gem) then
     def self.ensure_gem_subdirectories(path)
     end
 
+    # INCLUDE rubygems/defaults
+
     # Methods before this line will be removed when QuickLoader is replaced
     # with the real RubyGems
 
     GEM_PRELUDE_METHODS = Gem.methods(false)
 
-    require 'rubygems/defaults'
-
     begin
-      require 'rubygems/defaults/operating_system'
-    rescue LoadError
-    end
+      verbose, debug = $VERBOSE, $DEBUG
+      $DEBUG = $VERBOSE = nil
 
-    if defined?(RUBY_ENGINE) then
       begin
-        require 'rubygems/defaults/#{RUBY_ENGINE}'
+        require 'rubygems/defaults/operating_system'
       rescue LoadError
       end
+
+      if defined?(RUBY_ENGINE) then
+        begin
+          require "rubygems/defaults/#{RUBY_ENGINE}"
+        rescue LoadError
+        end
+      end
+    ensure
+      $VERBOSE, $DEBUG = verbose, debug
     end
 
     module QuickLoader
@@ -107,7 +116,8 @@ if defined?(Gem) then
           undef_method :gem if method_defined? :gem
         end
 
-        $".delete File.join(Gem::ConfigMap[:libdir], 'ruby',
+        $".delete File.join(Gem::ConfigMap[:libdir],
+                            Gem::ConfigMap[:ruby_install_name],
                             Gem::ConfigMap[:ruby_version], 'rubygems.rb')
 
         require 'rubygems'
@@ -119,7 +129,7 @@ if defined?(Gem) then
       def push_gem_version_on_load_path(gem_name, *version_requirements)
         if version_requirements.empty?
           unless GemPaths.has_key?(gem_name)
-            raise LoadError.new("Could not find RubyGem #{gem_name} (>= 0)\n") 
+            raise LoadError.new("Could not find RubyGem #{gem_name} (>= 0)\n")
           end
 
           # highest version gems already active
@@ -135,7 +145,7 @@ if defined?(Gem) then
 
           if requirement == ">" || requirement == ">="
             if (GemVersions[gem_name] <=> Gem.calculate_integers_for_gem_version(version)) >= 0
-              return false 
+              return false
             end
           elsif requirement == "~>"
             loaded_version = GemVersions[gem_name]
@@ -183,12 +193,16 @@ if defined?(Gem) then
 
         require_paths = []
 
-        GemPaths.values.each do |path|
-          if File.exist?(File.join(path, ".require_paths"))
-            require_paths.concat(File.read(File.join(path, ".require_paths")).split.map {|require_path| File.join(path, require_path)})
+        GemPaths.each_value do |path|
+          if File.exist?(file = File.join(path, ".require_paths")) then
+            paths = File.read(file).split.map do |require_path|
+              File.join path, require_path
+            end
+
+            require_paths.concat paths
           else
-            require_paths << File.join(path, "bin") if File.exist?(File.join(path, "bin"))
-            require_paths << File.join(path, "lib") if File.exist?(File.join(path, "lib"))
+            require_paths << file if File.exist?(file = File.join(path, "bin"))
+            require_paths << file if File.exist?(file = File.join(path, "lib"))
           end
         end
 
@@ -224,7 +238,7 @@ if defined?(Gem) then
 
   begin
     Gem.push_all_highest_version_gems_on_load_path
-    $" << File.join(Gem::ConfigMap[:libdir], "ruby",
+    $" << File.join(Gem::ConfigMap[:libdir], Gem::ConfigMap[:ruby_install_name],
                     Gem::ConfigMap[:ruby_version], "rubygems.rb")
   rescue Exception => e
     puts "Error loading gem paths on load path in gem_prelude"
